--- a/lab1-blink_arduino/test/README
+++ b/lab1-blink_arduino/test/README
@@ -1,11 +1,43 @@
+# Lab 1: YOUR_FIRSTNAME LASTNAME
 
-This directory is intended for PlatformIO Test Runner and project tests.
+### Morse code
 
-Unit Testing is a software testing method by which individual units of
-source code, sets of one or more MCU program modules together with associated
-control data, usage procedures, and operating procedures, are tested to
-determine whether they are fit for use. Unit testing finds problems early
-in the development cycle.
+1. Listing of C code which repeats one "dot" and one "comma" (BTW, in Morse code it is letter `A`) on a LED. Always use syntax highlighting, meaningful comments, and follow C guidelines:
 
-More information about PlatformIO Unit Testing:
-- https://docs.platformio.org/en/latest/advanced/unit-testing/index.html
+```c
+
+#define LED_RED PB0
+#define SHORT_DELAY 250 // Delay in milliseconds
+#define LONG_DELAY 500
+#define PB0 8
+
+int main(void)
+{
+    uint8_t led_value = LOW;  // Local variable to keep LED status
+
+    // Set pin where on-board LED is connected as output
+    pinMode(LED_RED, OUTPUT);
+
+    // Infinite loop
+    while (1)
+    {
+        digitalWrite(LED_RED, HIGH);
+        _delay_ms(SHORT_DELAY);
+        digitalWrite(LED_RED, LOW);
+        _delay_ms(SHORT_DELAY);
+        digitalWrite(LED_RED, HIGH);
+        _delay_ms(SHORT_DELAY);
+        digitalWrite(LED_RED, LOW);
+        _delay_ms(LONG_DELAY);
+        digitalWrite(LED_RED, HIGH);
+        
+    }
+
+    // Will never reach this
+    return 0;
+}
+```
+
+2. Scheme of Morse code application, i.e. connection of AVR device, LED, resistor, and supply voltage. The image can be drawn on a computer or by hand. Always name all components and their values!
+
+   ![your figure]()
